# Tensor-plus-plus

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  Source.cpp  Tensor++.sln  Tensor++.vcxproj  Tensor++.vcxproj.filters  all_test.cpp  benchmark.hpp  cpp.hint  helpers.hpp  introduction.cpp  tensor.hpp  tensor.hpp.gch  tensor_const_testing_suit.hpp  tensor_initialization_testing_suit.hpp  tensor_iteration_testing_suit.hpp  tensor_move_semantics_testing_suit.hpp  tensor_replace_testing_suit.hpp  tensor_resize_testing_suit.hpp  tensor_testing_suit.hpp  useful_concepts.hpp  useful_specializations.hpp
.github/workflows/: cmake.yml
inc/: tensor.hpp  tensor_useful_concepts.hpp  tensor_useful_specializations.hpp
introduction/: tensor_introduction.cpp  tensor_introduction_helpers.hpp
testing suits/inc/benchmarks/: benchmark.hpp
testing suits/inc/tests/: tensor_const_testing_suit.hpp  tensor_exceptions_testing_suit.hpp  tensor_initialization_testing_suit.hpp  tensor_iteration_testing_suit.hpp  tensor_move_semantics_testing_suit.hpp  tensor_replace_testing_suit.hpp  tensor_resize_testing_suit.hpp  tensor_testing_suit.hpp
testing suits/src/: all_test.cpp
